# abrege

./: .Dockerfile_dev  .dockerignore  .env  .env.local  .env.sample  .flake8  .gitignore  .gitlab-ci-dso.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README copy.md  README.md  compose.yaml  deployment.yaml  docker-compose-dev.yaml  docker-compose.frontend.yml  docker-compose.test.yaml  docker-compose.yaml  package.json  pnpm-lock.yaml  pyproject copy.toml  pyproject.toml  release-please-config-prerelease.json  release-please-config-release.json  release-please-manifest.json  requirements.txt  run-streamlit.sh  run.sh
abrege_api/: Dockerfile.dev  Dockerfile.prod  pyproject.toml  requirements.txt
api/: main.py  (+1 more)
apps/server/: pyproject.toml
apps/server/abrege_service/: Dockerfile  main.py
apps/server/abrege_service/clients/: ocr_client.py  server.py
apps/server/abrege_service/config/: openai.py
apps/server/abrege_service/models/: base.py
apps/server/abrege_service/models/chunking/: model.py
apps/server/abrege_service/models/summary/: parallele_summary_chain.py  qa_chain.py
apps/server/abrege_service/modules/: audio.py  base.py  cache.py  doc.py  image.py  ocr.py  url.py
apps/server/abrege_service/prompts/: prompting.py
apps/server/abrege_service/prompts/templates/: custom_prompt.jinja2  final_summary_prompt.jinja2  segement_summary_promt.jinja2
apps/server/abrege_service/schemas/: __init__.py
apps/server/abrege_service/tasks/: abrege.py  abrege_doc.py  abrege_pdf_images.py  abrege_text.py  abrege_url.py  base_task.py  chunk_task.py  errors.py  merge.py  ocr_task.py  tools.py  update_task.py
apps/server/abrege_service/utils/: content_type.py  file.py  images.py  lazy_pdf.py  text.py
apps/server/api/: Dockerfile  main.py
apps/server/api/core/security/: factory.py  token.py
apps/server/api/routes/: document_summary.py  external_loader.py  health.py  summarize.py  task.py
apps/server/api/routes/v1/: chat.py  chunk.py  leaderboard.py
apps/server/api/schemas/: content.py
apps/server/api/utils/: content_type.py  cors.py  fastapi_mcp_patch.py
apps/server/config/: logging.yaml
apps/server/evaluation/: Readme.md  client.py  evaluation_map_reduce.py  mapreduce.py
apps/server/llm-guard/config/: scanners.yml
apps/server/migration/: Dockerfile
apps/server/migration/versions/: 6fdb21e394c9_add_group_id_and_content_hash.py  eaa4e990d2ea_add_chunk_table.py  f3271d7e43ea_add_mergetask_table.py
apps/server/purge/: purge.sh
apps/server/src/: __init__.py
apps/server/src/clients/: __init__.py  ocr_client.py
apps/server/src/config/: connector.py  redis.py  s3.py  sentry.py
apps/server/src/connector/: base.py  redis_connector.py  s3_connector.py
apps/server/src/internal/: db.py
apps/server/src/models/: chunk.py  merge_task.py  task.py
apps/server/src/repositories/: chunk_repo.py  merge_task_repo.py  task_repo.py
apps/server/src/schemas/: __init__.py  chunk.py  code_error.py  content.py  merge_task.py  pagination.py  parameters.py  result.py  task.py
apps/server/src/services/: chunk_service.py  merge_task_service.py  task_service.py
apps/server/src/utils/: logger.py  url.py
apps/server/tests/abrege_service/: test_main.py
apps/server/tests/abrege_service/clients/: test_ocr_client.py
apps/server/tests/abrege_service/models/: test_base_service_model.py
apps/server/tests/abrege_service/models/summary/: test_async_map_reduce.py
apps/server/tests/abrege_service/modules/: test_audio_module.py  test_base_module.py  test_doc_module.py  test_image_module.py  test_ocr_module.py  test_url_module.py  test_video_module.py
apps/server/tests/abrege_service/prompt/: test_prompting_process.py
apps/server/tests/abrege_service/utils/: test_tokenizer_utils.py
apps/server/tests/api/client/: test_llm_guard_client.py
apps/server/tests/api/core/security/: test_security_token.py
apps/server/tests/api/routes/: conftest.py  test_document_summarize.py  test_summarize.py  test_task_routers.py
apps/server/tests/api/utils/: test_content_type.py  test_url_utils.py
apps/server/tests/data/: 2106.11520v2.md
apps/server/tests/src/clients/: test_ocr_client.py
apps/server/tests/src/repository/: test_chunk_repo.py
apps/server/tests/src/schemas/: test_code_error_access.py
apps/server/tests/src/utils/: test_url.py
apps/server/tests/test_data/: Lettre_de_Camus.odt  Séquence corpus albert camus.docx  albert_camus.txt  big_text.txt  tabFicSol2.doc
fastapi/: Dockerfile  pyproject.toml  run.sh
fastapi/app/: logconf.yaml  main.py
fastapi/app/utils/: pdf_handler.py
fastapi/utils/: pdf_handler.py
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  run.sh  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts
frontend/app/: main.py
frontend/src/: App.vue  components.d.ts  main.ts
frontend/src/api/: http-client.ts
frontend/src/api/types/: api.schema.d.ts
frontend/src/components/: CopiedTextTab.vue  CustomTabs.vue  ParamsResume.vue  ProgressBar.vue  ResumeInfoBulle.vue  ResumeResult.vue  SideBar.vue  UploadDocumentTab.vue  UrlTab.vue
frontend/src/composables/: use-resume-generator.ts
frontend/src/interfaces/: IResume.ts
frontend/src/stores/: abrege.ts
frontend/src/utils/: constants.ts  methods.ts
sdk/: pyproject.toml
sdk/abrege_sdk/: client_async.py  client_sync.py  exceptions.py
sdk/abrege_sdk/schemas/: code_error.py  content.py  health.py  task.py
sdk/tests/abrege_sdk/: test_sync_clinet.py
src/: explore copy.ipynb  explore.ipynb  extractive_summary.py  pyproject.toml  requirements.txt  selfcheck.ipynb  selfcheck.py  summary_chain.py  test_perso.ipynb
src/abrege/: __init__.py  extractive_summary.py  questeval.py  selfcheck.py  summary_chain.py  tes_idea.py
src/abrege/prompt/: template.py
src/clients/: __init__.py
src/config/: celery.py  minio.py  redis.py  s3.py
src/connector/: minio_connector.py  s3_connector.py
src/logger/: logger.py
src/schemas/: __init__.py  content.py  health.py  parameters.py  result.py  task.py
src/utils/: url.py
(+256 files in other folders)
