[project]
name = "abrege"
version = "0.0.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "python-json-logger>=3.3.0",
    "sqlalchemy>=2.0.40",
    "toml>=0.10.2",
]

[dependency-groups]


abrege-api = [
]
version = [
    "commitizen>=4.4.1",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.2",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.ruff]
line-length = 150

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.3",
]
