[project]
name = "abrege"
version = "0.0.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary==2.9.10",
    "pydantic-settings==2.9.1",
    "python-json-logger==3.3.0",
    "sqlalchemy==2.0.40",
    "toml>=0.10.2",
]

[dependency-groups]

abrege-api = [
    "fastapi>=0.115.12",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]
version = [
    "commitizen>=4.4.1",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.2",
]


[tool.ruff]
line-length = 150

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.3",
]
