[tool.poetry]
name = "abrege-api"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
abrege = {path = "../abrege_lib/"}
python = ">=3.11, <3.13"
langchain = "^0.1.16"
langchain-openai = "^0.1.6"
fastapi = "^0.111.0"
pypdf = "^4.2.0"
docx2txt = "^0.8"
unstructured = "^0.14.3"

[tool.poetry.group.dev.dependencies]
abrege = {path = "../abrege_lib/", develop = true, extras = ["dev"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
