[tool.poetry]
name = "abrege-api"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
abrege = {path = "../src/"}
python = ">=3.11, <3.13"
langchain = "^0.1.16"
langchain-openai = "^0.1.6"
fastapi = "^0.111.0"
pypdf = "^4.2.0"
docx2txt = "^0.8"
unstructured = "^0.14.3"
python-docx = "^1.1.2"
pypandoc-binary = "^1.13"
pymupdf = "^1.24.5"

[tool.poetry.group.dev.dependencies]
abrege = {path = "../src/", develop = true, extras = ["dev"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
