[project]
name = "abrege-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "boto3>=1.42.49",
    "celery>=5.6.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=7.0.0",
    "python-json-logger>=4.0.0",
    "pyyaml>=6.0.3",
    "redis>=7.1.1",
    "ruff>=0.15.1",
    "sqlalchemy>=2.0.46",
    "toml>=0.10.2",
]
