[tool.poetry]
package-mode = true
name = "abrege"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
langchain = "0.1.16"
langchain-openai = "^0.1.6"
langchain-core = "^0.1.52"
langchain-community = "^0.0.37"
networkx = {version = "^3.3", extras = ["default"]}
nltk = "^3.8.1"
scikit-learn = "^1.4.2"
transformers = "^4.40.2"
tiktoken = "^0.6.0"
langchain-chroma = {version = "^0.1.1", optional = true }
chromadb = {version = "^0.5.0", optional = true }
pytest = {version = "^8.2.0", optional = true }
mlflow = {version = "^2.13.0", optional = true }

[tool.poetry.extras]
dev = ["langchain-chroma", "chromadb", "pytest", "mlflow"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
