[project]
name = "abrege"
version = "4.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.38.3",
    "celery[redis]>=5.5.2",
    "minio>=7.2.15",
    "psycopg2-binary==2.9.10",
    "pydantic-settings==2.9.1",
    "python-json-logger==3.3.0",
    "sqlalchemy==2.0.40",
    "flower>=2.0.1",
    "toml>=0.10.2",
    "psutil>=7.0.0",
]

[dependency-groups]

abrege-api = [
    "aiohttp>=3.11.18",
    "fastapi>=0.115.12",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "python-magic==0.4.27",
    "uvicorn>=0.34.2",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "python-keycloak>=5.7.0",
    "aiofiles>=24.1.0",
]
version = [
    "commitizen>=4.4.1",
]
test = [
    "datasets==3.5.0",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-xdist>=3.6.1",
    "ruff>=0.11.2",
]
abrege-service = [
    "jinja2==3.1.6",
    "langchain==0.3.24",
    "langchain-openai>=0.3.14",
    "langfuse>=3.2.3",
    "langgraph==0.3.34",
    "markitdown[docx,pdf,pptx,xlsx]==0.1.1",
    "moviepy==2.1.2",
    "odfpy>=1.4.1",
    "openai==1.76.0",
    "pdf2image>=1.17.0",
    "pydub==0.25.1",
    "pymupdf4llm==0.0.21",
    "pypandoc>=1.15",
    "spire-doc>=13.6.4",
    "tiktoken>=0.9.0",
    "transformers>=4.51.3",
    "unstructured==0.17.2",
    "vosk==0.3.45",
]
evaluation = [
    "bert-score>=0.3.13",
    "datasets==3.5.0",
    "evaluate==0.4.3",
    "fastapi>=0.115.12",
    "hf-xet>=1.0.5",
    "langchain>=0.3.24",
    "langchain-openai>=0.3.14",
    "langgraph>=0.3.34",
    "nltk==3.9.1",
    "rouge-score>=0.1.2",
]
openai = [
    "openai>=1.76.0",
]
migration = [
    "alembic>=1.15.2",
    "psycopg2-binary==2.9.10",
    "sqlalchemy==2.0.40",
]


[tool.ruff]
line-length = 150

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.3",
]


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
  "pyproject.toml",
]
