[project]
name = "abrege"
version = "1.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.15",
    "celery[redis]>=5.5.3",
    "minio>=7.2.16",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.14.2",
    "python-json-logger>=4.1.0",
    "sqlalchemy>=2.0.51",
    "flower>=2.0.1",
    "toml>=0.10.2",
    "psutil>=7.0.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]

abrege-api = [
    "aiohttp>=3.14.1",
    "fastapi>=0.116.1",
    "python-multipart>=0.0.31",
    "requests>=2.33.0",
    "tqdm>=4.67.1",
    "python-magic==0.4.27",
    "uvicorn>=0.35.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "python-keycloak>=5.8.1",
    "aiofiles>=24.1.0",
    "sentry-sdk[fastapi]>=2.34.1",
]
version = [
    "commitizen>=4.16.4",
]
test = [
    "datasets>=5.0.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.10",
    "pytest-dotenv>=0.5.2",
]
abrege-service = [
    "jinja2==3.1.6",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langfuse>=3.3.0",
    "langgraph>=1.2.7",
    "markitdown[docx,pdf,pptx,xlsx]==0.1.6",
    "moviepy==2.2.1",
    "odfpy>=1.4.1",
    "openai>=1.101.0",
    "pdf2image>=1.17.0",
    "pydub==0.25.1",
    "pymupdf4llm>=1.28.0",
    "pypandoc>=1.15",
    "python-keycloak>=7.1.1",
    "spire-doc>=13.8.0",
    "tiktoken>=0.11.0",
    "transformers>=4.55.3",
    "unstructured>=0.18.18",
    "vosk==0.3.45",
    "sentry-sdk[celery]>=2.34.1",
]
evaluation = [
    "bert-score>=0.3.13",
    "datasets>=5.0.0",
    "evaluate>=0.4.6",
    "fastapi>=0.115.12",
    "hf-xet>=1.1.8",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "nltk>=3.9.4",
    "rouge-score>=0.1.2",
]
openai = [
    "openai>=2.44.0",
]
migration = [
    "alembic>=1.16.4",
    "psycopg2-binary==2.9.10",
    "sqlalchemy>=2.0.43",
]


[tool.pytest.ini_options]
env_override_existing_values = 1
env_files = ["tests/.env.testing"]

[tool.ruff]
line-length = 150

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.3",
]


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
  "pyproject.toml",
]
